  downloads. The downloads folder can now be configured via Preferences.
- Added "Mark All Subscriptions as Read" command. (Thanks to Yann Bizeul).
- Incorporated patches from Yann Bizeul and Adam Hammer.
- Close button on tabs now depress and highlight properly.
- New Preferences UI.
- Font selection in Preferences changed to use the standard OS font picker.

2.0.0.2010
----------
- Added auto-expire support. Articles older than a given number of days can be automatically moved
  to the trash folder.
- Handle RDF:Sequence parsing for feeds such as http://www.kongisking.net. This ensures that
  feeds are properly organised by date in the absence of any date in the feed.
- Smart folder dates fields are now fixed strings representing a time range rather than an actual date.
- Added Italian Localisation. (Thanks to Marcello Teodori).
- Pre-build 2005 format databases no longer upgraded.
- Removed old format display style conversion code. Styles on the web site have been updated.
- Fixed bug where smart folder criteria was unintentionally extended when doing a filtered search.
- Changed a couple of default preferences. We no longer check for new articles on startup and the
  default layout is now to have the article pane at the bottom.
- Fixed growl notification handling not bringing the main window to the foreground.
- Added "Skip Folder" command to mark all articles in the current folder read and skip to the next
  folder with unread articles. The shortcut key for this is 'S'.

2.0.0.2009
----------
- Fixed potential database corruption bug introduced in build 2007 when refreshing a feed that
  uses entity characters specified with hexadecimal notation.
- Cmd+W closes Preferences window if it is open, rather than the main window.
- The "About Vienna" window can now be closed with Esc or Cmd+W.
- Reduced height of tabs slightly.
- Holding down Cmd+Alt keys while clicking tab close button closes all tabs.
- Fixed close tab behaviour properly this time.
