@@ -54,6 +54,7 @@ extern NSString * MAPref_MinimumFontSize;
 extern NSString * MAPref_UseMinimumFontSize;
 extern NSString * MAPref_AutoExpireDuration;
 extern NSString * MAPref_DownloadsList;
+extern NSString * MAPref_ShowFolderImages;
 
 extern int MA_Default_BackTrackQueueSize;
 extern int MA_Default_RefreshThreads;
