@@ -54,6 +54,7 @@ NSString * MAPref_MinimumFontSize = @"MinimumFontSize";
 NSString * MAPref_UseMinimumFontSize = @"UseMinimumFontSize";
 NSString * MAPref_AutoExpireDuration = @"AutoExpireFrequency";
 NSString * MAPref_DownloadsList = @"DownloadsList";
+NSString * MAPref_ShowFolderImages = @"ShowFolderImages";
 
 const int MA_Default_BackTrackQueueSize = 20;
 const int MA_Default_RefreshThreads = 6;
