@@ -942,6 +942,7 @@
 				German,
 				Swedish,
 				Italian,
+				Russian,
 			);
 			mainGroup = 2A37F4AAFDCFA73011CA2CEA /* Vienna */;
 			projectDirPath = "";
